[add] support for pagination, improve test, docs and logger
